src/styles/Results/Notification.css
.notiButton {
  width: 100%;
}

.notiContainer {
  width: 75%;
  margin-left: auto;
}

.json {
  color: lime;
  background-color: black;
  padding: 5px;
}

.noti-row {
  align-items: center;
  margin-top: 10px !important;
}

